# hangman

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tester.cpp  words.txt
